gRPC update API with optional parametera
